fixed border alignment

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ header >h5 {
     border-bottom:4px solid #f4f4f4;
     position:absolute;
     top:18em;
-    width:55em; 
+    width:59.5em; 
 }
 .bioDetails >h3 {
     color:rgb(5, 5, 90);
